🔄 Agregar automatización de backup de Supabase con GitHub Actions
- Script completo de backup que incluye todas las tablas
- Workflow de GitHub Actions para backup automático diario
- Los backups se guardan directamente en el repositorio
- Limpieza automática de backups antiguos (mantiene últimos 30)
- Documentación completa del sistema

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,9 @@ FUENTESXI_backup/
 data/raw/
 data/catcom/
 data/fuentesxi/
+# backups/ - Permitido para backups automáticos de Supabase
+# backup_*.json - Permitido para backups automáticos
+# backup_*.db - Permitido para backups automáticos
 
 # Documentation backup data
 docs/backup/
